--- a/shop-ease/src/app/catalog/catalog.component.html
+++ b/shop-ease/src/app/catalog/catalog.component.html
@@ -1,12 +1,12 @@
 <div class="catalog">
     <h2>Catálogo de Productos</h2>
     <div class="product-list">
-      <div class="product-card" *ngFor="let product of products">
+      <div class="product-card" *ngFor="let product of productos">
         <img [src]="product.imageUrl" alt="{{ product.name }}" />
         <h3>{{ product.name }}</h3>
         <p>{{ product.description }}</p>
         <p><strong>Precio: ${{ product.price }}</strong></p>
-        <button>Comprar</button>
+        <button (click)="agregarAlCarrito(productos)">Agregar al carrito</button>
       </div>
     </div>
   </div>
