--- a/shop-ease/src/styles.scss
+++ b/shop-ease/src/styles.scss
@@ -1,6 +1,1 @@
-@import "primeicons/primeicons.css";
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* You can add global styles to this file, and also import other style files */
