--- a/shop-ease/src/app/catalog/catalog.component.html
+++ b/shop-ease/src/app/catalog/catalog.component.html
@@ -6,18 +6,17 @@
     <label>
       <input type="checkbox" (change)="filtrarPorDisponibilidad($event)">
       Solo disponibles
+      
     </label>
   </div>
   <div class="product-list">
-    <div class="product-card" *ngFor="let product of productos">
-      <div class="favorite-icon" (click)="toggleFavorite(product)">
-        <i [class]="isFavorite(product) ? 'fas fa-heart' : 'far fa-heart'"></i>
-      </div>
-      <img [src]="product.imageUrl" alt="{{ product.name }}" />
+    <div class="product-card" *ngFor="let product of productosFiltrados">
+      <img [src]="product.imageUrl" alt="{{ product.name }}">
       <h3>{{ product.name }}</h3>
-      <p>{{ product.price | currency }}</p>
-      <button class="buy-now">Buy Now</button>
+      <p>{{ product.description }}</p>
+      <p><strong>Precio: ${{ product.price }}</strong></p>
+      <p>{{product.availably}}</p>
+      <button (click)="agregarAlCarrito(product)">🛒 Agregar al carrito</button>
     </div>
-    
   </div>
 </div>
