--- a/shop-ease/src/app/catalog/catalog.component.scss
+++ b/shop-ease/src/app/catalog/catalog.component.scss
@@ -17,41 +17,29 @@
   .product-card {
     border: 1px solid #ddd;
     padding: 15px;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    position: relative;
+    border-radius: 10px;
     text-align: center;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
     img {
       width: 100%;
       height: auto;
       border-radius: 10px;
     }
-    .favorite-icon {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      cursor: pointer;
-      font-size: 20px;
-      color: #999;
-    }
-    .favorite-icon .fas {
-      color: red;
-    }
 
     button {
-      background-color: black;
+      background-color: #007bff;
       color: white;
-      padding: 10px;
       border: none;
-      width: 100%;
+      padding: 10px;
       cursor: pointer;
       border-radius: 5px;
-      margin-top: 10px;
+      width: 100%;
     }
 
     button:hover {
-      background-color: #333;
+      background-color: #0056b3;
     }
   }
 }
