--- a/shop-ease/src/app/components/header/header.component.html
+++ b/shop-ease/src/app/components/header/header.component.html
@@ -6,9 +6,9 @@
   </div>
   <ul>
     <li>Inicio</li>
-    <li>Catálogo</li>
+    <li><a href="/catalog">Catálogo</a></li>
     <li>
-      <i class="pi pi-shopping-cart"></i>
+      <i><a href="/shopping-cart">🛒</a></i>
     </li>
     <li>
       <i class="pi pi-user"></i>
