--- a/shop-ease/src/app/payment/payment.component.html
+++ b/shop-ease/src/app/payment/payment.component.html
@@ -84,7 +84,7 @@
           </section>
           <section class="action">
             <input type="button" class="btn btn-light p-3 w-25" value="Back">
-            <input type="button" class="btn btn-dark p-3 w-25" value="Pay">
+            <input (click)="payment();" type="button" class="btn btn-dark p-3 w-25" value="Pay">
           </section>
         </section>
       </div>
