add route to root in nav section & add title

--- a/shop-ease/src/app/components/header/header.component.html
+++ b/shop-ease/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <i class="pi pi-search"></i>
   </div>
   <ul>
-    <li>Inicio</li>
+    <li><a href="/">Inicio</a></li>
     <li><a href="/catalog">Catálogo</a></li>
     <li>
       <i><a href="/shopping-cart">🛒</a></i>
