--- a/shop-ease/src/app/app.component.html
+++ b/shop-ease/src/app/app.component.html
@@ -1,2 +1,3 @@
 <shopease-header></shopease-header>
+<h1 style="text-align: center; margin-top: 3rem;">SHOPEASE</h1>
 <router-outlet></router-outlet>
