--- a/shop-ease/src/styles.scss
+++ b/shop-ease/src/styles.scss
@@ -1,6 +1,9 @@
 @import "primeicons/primeicons.css";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
